fixtures/valid/resource-evidence-runtime/src/worker/public.ts
export function runWorker(): string {
  return "ready";
}
