fixtures/invalid/resource-evidence-detects-new/src/runtime/public.ts
export function runRuntime(): void {
  return undefined;
}
